# cellpose

./: conftest.py  imagej_roi_converter.py  pyproject.toml  setup.py
.github/workflows/: test_and_deploy.yml
cellpose/: __main__.py  cli.py  core.py  denoise.py  dynamics.py  export.py  image_operations.py  io.py  metrics.py  models.py  plot.py  train.py  transforms.py  utils.py  version.py  vit_sam.py
cellpose/contrib/: distributed_segmentation.py
cellpose/gui/: gui.py  gui3d.py  guiparts.py  io.py  make_train.py  menus.py
docs/: conf.py
paper/1.0/: cp_unets.py  performance_figs.py  train_maskrcnn.py
paper/2.0/: datasets.py  train_specialists.py  train_subsets.py
paper/3.0/: analysis.py  care.py  fig_utils.py  figures.py  noise2self.py  noise2void.py  train_subsets.py
paper/cpsam/: benchmarks.py  eval_3D.py  figures.py  semantic.py  train_subsets.py
paper/neurips/: analysis.py  fig_utils.py  figures.py
tests/: test_dynamics.py  test_import.py  test_output.py  test_shape.py  test_train.py  test_transforms.py
