[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose"
authors = [
    {name = "Marius Pachitariu", email = "stringerc@janelia.hhmi.org"},
    {name = "Carsen Stringer"},
    {name = "Lucca Pellegrini", email = "pellegrini@verticordia.com"}
]
description = "anatomical segmentation algorithm"
readme = "README.md"
license = {text = "BSD"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["segmentation", "microscopy", "cellpose", "deep-learning"]
dynamic = ["version"]

dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "natsort",
    "tifffile",
    "tqdm",
    "torch>=1.6",
    "torchvision",
    "opencv-python-headless",
    "fastremap",
    "imagecodecs",
    "roifile",
    "fill-voids",
    "segment_anything"
]

[project.optional-dependencies]
gui = [
    "pyqtgraph>=0.12.4",
    "pyqt6",
    "pyqt6.sip",
    "qtpy",
    "superqt"
]
docs = [
    "sphinx>=3.0",
    "sphinxcontrib-apidoc",
    "sphinx_rtd_theme",
    "sphinx-argparse"
]
distributed = [
    "dask",
    "distributed",
    "dask_image",
    "pyyaml",
    "zarr",
    "dask_jobqueue",
    "bokeh",
    "pyarrow"
]
bioimageio = ["bioimageio.core"]
image = ["nd2", "pynrrd"]
test = ["pytest", "pytest-cov", "pytest-xvfb"]
all = [
    "pyqtgraph>=0.12.4", "pyqt6", "pyqt6.sip", "qtpy", "superqt",
    "dask", "distributed", "dask_image", "pyyaml", "zarr", "dask_jobqueue", "bokeh", "pyarrow",
    "nd2", "pynrrd", "bioimageio.core"
]

[project.scripts]
cellpose = "cellpose.__main__:main"

[project.urls]
homepage = "https://github.com/MouseLand/cellpose"
documentation = "https://cellpose.readthedocs.io"
repository = "https://github.com/MouseLand/cellpose"
changelog = "https://github.com/MouseLand/cellpose/releases"

[tool.setuptools.packages.find]
include = ["cellpose*"]

[tool.setuptools.package-data]
cellpose = ["**"]

[tool.setuptools_scm]
write_to = "cellpose/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --color=yes --cov=cellpose --cov-report=xml --ignore=tests/contrib"
markers = ["slow: mark test as slow to run"]

[tool.yapf]
based_on_style = "google"
split_before_named_assigns = false
column_limit = 88
